--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,18 @@ app.version='@project.version'
 app.url=http://localhost:8080
 app.dev-name=Maximiliano Agustin Oliva
 app.dev-email=405193@tecnicatura.frc.utn.edu.ar
-spring.application.name=springbootTemplate
+spring.application.name=RabbitMQTest
 
 ## SPRING DOC PROPERTIES ##
 springdoc.packages-to-scan=ar.edu.utn.frc.tup.lc.iv.controllers
 springdoc.show-actuator=true
 springdoc.swagger-ui.disable-swagger-default-url=true
 springdoc.swagger-ui.path=/swagger-ui.html
+
+## RabbitMQ PROPERTIES ##
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+tpi.queue.name=cola-test
